JavaDoc semi-complete (watch TODO) + Code Reformat